Pulled out song details into separate component from player

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,5 @@
-body {
-  font-family: Arial;
+.jumbotron {
+  background-image: url("../forestbckgd.jpg"); !important
+  background-size: cover; !important
+  color: white;
 }
