--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
-.jumbotron {
+div.jumbotron {
   background-image: url("../forestbckgd.jpg"); !important
-  background-size: cover; !important
-  color: white;
+}
+div.jumbotron > h3 {
+  color: white; !important
 }
