Fixed bootstrap grid layout

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,9 @@
 #player {
   background-image: url("../forestbckgd.jpg");
   background-size: cover;
+  text-align: center;
 }
+
 #player .jumbotron {
   background: none;
 }
